--- a/src/index.css
+++ b/src/index.css
@@ -1,339 +1,294 @@
-*,
-::after,
-::before {
-  box-sizing: border-box;
-  margin:0;
-  padding:0;
-}
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200&display=swap");
 
-html {
-  font-size: 100%;
-} /*16px*/
-
-:root {
-  /* colors */
-  --primary-100: #e6f0ff;
-  --primary-200: #b4d3fe;
-  --primary-300: #82b6fd;
-  --primary-400: #5098fc;
-  --primary-500: #03449d;
-  --primary-600: #034caf;
-  --primary-700: #02367d;
-  --primary-800: #01214b;
-  --primary-900: #000b19;
-
-  /* grey */
-  --grey-50: #f8fafc;
-  --grey-100: #f1f5f9;
-  --grey-200: #e2e8f0;
-  --grey-300: #cbd5e1;
-  --grey-400: #94a3b8;
-  --grey-500: #64748b;
-  --grey-600: #475569;
-  --grey-700: #334155;
-  --grey-800: #1e293b;
-  --grey-900: #0f172a;
-  /* rest of the colors */
-  --black: #222;
-  --white: #fff;
-  --red-light: #f8d7da;
-  --red-dark: #842029;
-  --green-light: #d1e7dd;
-  --green-dark: #0f5132;
-
-  /* fonts  */
-  --small-text: 0.875rem;
-  --extra-small-text: 0.7em;
-  /* rest of the vars */
-  /* --backgroundColor: var(--white); */
-  --backgroundColor: var(--grey-100);
-  --textColor: var(--grey-900);
-  --borderRadius: 0.25rem;
-  --letterSpacing: 1px;
-  --transition: 0.3s ease-in-out all;
-  --max-width: 1120px;
-  --fixed-width: 600px;
-  --view-width: 90vw;
-  /* box shadow*/
-  --shadow-1: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-  --shadow-2: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-    0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  --shadow-3: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
-    0 4px 6px -2px rgba(0, 0, 0, 0.05);
-  --shadow-4: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
-    0 10px 10px -5px rgba(0, 0, 0, 0.04);
-}
-
-body {
-  background: var(--backgroundColor);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji,
-    Segoe UI Emoji, Segoe UI Symbol;
-  font-weight: 400;
-  line-height: 1.75;
-  color: var(--textColor);
-}
-
-p {
-  margin-bottom: 1.5rem;
-  max-width: 40em;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5 {
+* {
   margin: 0;
-  margin-bottom: 1.38rem;
-  font-weight: 400;
-  line-height: 1.3;
-  text-transform: capitalize;
-  letter-spacing: var(--letterSpacing);
+  font-family: "Josefin Sans";
+}
+
+.App {
+  font-family: "Josefin Sans", sans-serif;
+  width: 100vw;
+  height: 170vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 0;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 30px;
+}
+
+#light {
+  background-color: #ffffff;
+}
+
+#dark {
+  background-color: #000000
+}
+
+
+
+.profile {
+  height: 50vh;
+  padding: 5px 2px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
+}
+
+#light .profile {
+  color: rgba(0, 0, 0, 0.907);
+}
+#dark .profile{
+  color: rgb(255, 255, 255);
+}
+
+#profile #avatar {
+  height: 100%;
+  width: 70%;
+  border-radius: 50%;
+  border: 1px solid black;
+  margin: 10px;
+  text-align: center;
+}
+#avatar img {
+  border: 1px solid black;
+  height: 100%;
+  width: 90%;
+  border-radius: inherit;
+  text-align: center;
+}
+
+#profile-section {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-weight: bolder;
+}
+#light .profile-section {
+  color: rgba(0, 0, 0, 0.907);
+}
+#dark .profile-section{
+  color: rgb(255, 255, 255);
+}
+
+#data-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 65%;
+  width: 20%;
+  margin-left: 30px;
+  margin-top: 30px;
+}
+
+#light #data-card {
+  color: rgba(255, 255, 255, 0.907);
+}
+#dark #data-card{
+  color: rgb(0, 0, 0);
 }
 
 h1 {
-  margin-top: 0;
-  font-size: 3.052rem;
+  font-size: 2rem;
+  text-align: center;
+  padding: 1rem;
+  font-style: italic;
+  box-shadow: rgb(100, 98, 98);
+}
+#light h1 {
+  color: rgba(0, 0, 0, 0.907);
+}
+#dark h1 {
+  color: rgb(255, 255, 255);
 }
 
-h2 {
-  font-size: 2.441rem;
+h2{
+  font-size: 1.5rem;
+  text-align: center;
+  padding: 1rem;
+  font-style: normal;
+  position: relative;
+
+}
+#light h2 {
+  color: rgba(0, 0, 0, 0.907);
+}
+#dark h2 {
+  color: rgb(255, 255, 255);
+}
+h2 .repository-list{
+  color: aqua;
+}
+article {
+  margin: auto;
+  padding: 0 20px;
+  text-align: center;
+  font-size: small;
+  margin-top: 25px;
 }
 
-h3 {
-  font-size: 1.953rem;
+#light .article {
+  color: rgba(255, 255, 255, 0.907);
+}
+#dark .article {
+  color: rgb(0, 0, 0);
 }
 
-h4 {
-  font-size: 1.563rem;
+
+
+.buttons {
+  justify-content: space-around;
+  margin: 5px;
+  cursor: pointer;
+  background-color: rgb(61, 59, 59);
+  color: rgb(255, 255, 255);
+  border-radius: 5px;
+  font-style: bolder;
+  font-size: 15px;
+  box-shadow: rgb(61, 59, 59);
+  text-align: center;
 }
 
-h5 {
-  font-size: 1.25rem;
-}
- 
-small,
-.text-small {
-  font-size: var(--small-text);
+a .buttons {
+  border-radius: 5px;
+  text-decoration: none;
+  background-color: rgb(61, 59, 59);
+  color:rgb(0, 119, 163);
+  text-align: center;
 }
 
+.bio {
+  font-size: 30px;
+  text-align: center;
+  margin-top: 20px;
+  font-weight: bolder;
+  
+}
+#light .bio {
+  color: rgba(0, 0, 0, 0.907);
+}
+#dark .bio {
+  color: rgb(255, 255, 255);
+}
+
+.location{
+  font-size: 20px;
+  margin-top: 20px;
+}
+
+#light .location {
+  color: rgba(0, 0, 0, 0.907);
+}
+#dark .location {
+  color: rgb(255, 255, 255);
+}
+
+#user-data {
+  height: 90%;
+  width: 285px;
+  margin: 20px;
+  font-size: 9px;
+  position: inherit;
+  text-align: center;
+}
+
+#light #user-data {
+  background-color: rgba(0, 0, 0, 0.907);
+}
+#dark #user-data{
+  background-color: rgb(255, 255, 255);
+}
+
+#paginate {
+  position: relative;
+  margin-top: 50px;
+}
+
+#outlet {
+  margin-top: 80px;
+}
 a {
   text-decoration: none;
-}
-ul {
-  list-style-type: none;
-  padding: 0;
+  color: black;
 }
 
-.img {
-  width: 100%;
-  display: block;
-  object-fit: cover;
-}
-/* buttons */
 
-.btn {
+.switch {
+  display: flex;
+  justify-content: right;
+  align-items: right;
   cursor: pointer;
-  color: var(--white);
-  background: var(--primary-500);
-  border: transparent;
-  border-radius: var(--borderRadius);
-  letter-spacing: var(--letterSpacing);
-  padding: 0.375rem 0.75rem;
-  box-shadow: var(--shadow-1);
-  transition: var(--transition);
-  text-transform: capitalize;
-  display: inline-block;
-}
-.btn:hover {
-  background: var(--primary-700);
-  box-shadow: var(--shadow-3);
-}
-.btn-hipster {
-  color: var(--primary-500);
-  background: var(--primary-200);
-}
-.btn-hipster:hover {
-  color: var(--white);
-  background: var(--black);
-}
-.btn-block {
-  width: 100%;
-}
-/* End Of Global Styles */
-/* End Of Global Styles */
-/* End Of Global Styles */
-
-/* Search */
-.search-container{
-  height:5rem;
-  background:var(--white);
-  display:flex;
-  align-items:center;
-  justify-content:center;
-}
-.search-container form{
-  width:var(--view-width);
-  max-width:var(--max-width);
-  display:flex;
-  gap:0.5rem;
-  flex-wrap:wrap;
-}
-.search-container .form-input{
-  max-width:200px;
-  padding:0.375rem 0.75rem;
-  border-radius:var(--borderRadius);
-  background:var(--backgroundColor);
-  border:1px solid var(--grey-200);
-}
-::placeholder{
-  font-family:inherit;
-  color:var(--grey-400);
-}
-.search-container .btn{
-  font-size:0.75rem;
-}
-/* Favorites */
-.favorites{
-  background:var(--black);
-  color:var(--white);
-  padding:1rem 0;
-}
-.favorites-content{
-  width:var(--view-width);
-  max-width:var(--max-width);
-  margin:0 auto;
-}
-.favorites-container{
-  display:flex;
-  gap:0.5rem;
-  flex-wrap:wrap;
-}
-.favorite-item{
-  text-align:center;
-}
-.favorites-img{
-  width:60px;
-  border-radius:50%;
-  border:5px solid var(--white);
-  cursor:pointer;
-}
-.remove-btn{
-  margin-top:0.25rem;
-  background:transparent;
-  color:var(--white);
-    border:transparent;
-  cursor:pointer;
-  font-size:0.5rem;
-  transition:var(--transition);
-}
-.remove-btn:hover{
-  color:var(--red-dark)
-}
-/* Meals */
-.section,.section-center{
-  padding:3rem 0;
-  width:var(--view-width);
-  max-width:var(--max-width);
-  margin:0 auto;
+  font-size: 10px;
 }
 
-.section-center{
-  display:grid;
-  gap:2rem;
+.alert {
+  position: relative;
+  font-size: 20px;
+  color: rgb(40, 19, 19);
+  text-align: center;
 }
-@media screen and (min-width:776px){
-  .section-center{
-    grid-template-columns:1fr 1fr;
-  }
-}
-@media screen and (min-width:992px){
-  .section-center{
-    grid-template-columns:1fr 1fr 1fr;
-  }
-}
-.single-meal{
-  background:var(--white);
-  color:var(--textColor);
-  border-radius:var(--borderRadius);
-  box-shadow:var(--shadow-2);
-  transition:var(--transition);
-}
-.single-meal:hover{
-    box-shadow:var(--shadow-4);
-}
-.single-meal img{
-  height:15rem;
-    border-top-left-radius:var(--borderRadius);
-    border-top-right-radius:var(--borderRadius);
-cursor:pointer;
-}
-.single-meal h5{
-  padding:0;
-  margin:0;
-}
-.single-meal footer{
-  padding:1rem 1.5rem;
-  display:flex;
-  align-items:center;
-  justify-content: space-between;
-  flex-wrap:wrap;
-}
-.like-btn{
-  background:transparent;
-  border:transparent;
-  font-size:1.5rem;
-  cursor:pointer;
-  transition:var(--transition);
-}
-.like-btn:hover{
-  color:var(--red-dark);
-  transform:translateY(-2px)
-}
-/* Modal */
 
-.modal-overlay{
-  position:fixed;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  background:rgba(0,0,0,0.85);
-  display:grid;
-  place-items:center;
-  transition:var(--transition);
-  z-index:100;
+
+body{
+  margin: o;
 }
-.modal-container{
-  width:80vw;
-  max-width:800px;
-  height:80vh;
-  overflow:scroll;
-  background:var(--white);
-  border-radius:var(--borderRadius);
+
+.navbar{
+  display: flex;
+  align-items: left;
+  gap: 1rem;
+  padding: 0 1rem;
 }
-.modal-img{
-  height:15rem;
-   border-top-left-radius:var(--borderRadius);
-    border-top-right-radius:var(--borderRadius);
+
+#light .navbar {
+  color: rgba(0, 0, 0, 0.907);
 }
-.modal-content{
-  padding:1rem 1.5rem;
+#dark .navbar {
+  color: rgb(255, 255, 255);
 }
-.modal-content p{
-  color:var(--grey-600);
+
+.site-tittle{
+  font-size: 2rem;
+  position: relative;
+  text-align: center;
+  font: italic;
+  
+
 }
-.modal-content a{
-  display:block;
-  color:var(--primary-500);
-  margin-bottom:1rem;
-  text-decoration:underline;
-  transition:var(--transition);
+.navbar ul{
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: 1rem;
 }
-.modal-content a:hover{
-  color:var(--black)
+
+.navbar a{
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  padding: .25rem;
+
 }
-.close-btn{
-  background:var(--red-dark);
-  color:var(--white);
+
+#light .navbar a {
+  color: rgba(0, 0, 0, 0.907);
+}
+#dark .navbar a {
+  color: rgb(255, 255, 255);
+}
+
+.navbar li.active{
+  background-color: #555;
+}
+
+.navbar li:hover{
+  background-color: rgb(0, 57, 148);
+}
+.navbar li.active{
+  background-color: #555;
 }
